--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "puppeteer": "^23.6.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",  
     "@types/node": "^22.7.8",
     "typescript": "^5.6.3"
+  },
+  "scripts": {
+    "start": "tsc && node dist/index.js",
+    "dev": "ts-node index.ts"
   }
 }
