--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "puppeteer": "^23.6.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",  
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.14",
     "@types/node": "^22.7.8",
     "typescript": "^5.6.3"
   },
