--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "puppeteer": "^23.6.0"
+    "puppeteer": "^23.6.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
