--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "strict": true,
       "esModuleInterop": true
     },
-    "include": ["index.ts", "src/**/*.ts"],
+    "include": ["index.ts", "src/**/*.ts", "redisClient.ts"],
     "exclude": ["node_modules"]
   }
   
